// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PC operations > keyboard operations > in ActionLogPane, press Backspace to remove empty item and move to ActionLogListPane > after press Backspace 1`] = `
<div>
  <div>
    <input />
  </div>
  <button>
    start sync
  </button>
  <pre />
  <div
    class="actionLogList_container"
  >
    
    
    
    <div
      class="actionLogList_separator"
    >
      tentative
    </div>
    <div
      class="actionLogList_actionLog_container selected"
    >
      <div
        class="actionLogList_actionLog_startAt"
      >
        N/A
      </div>
      <div
        class="actionLogList_actionLog_endAt"
      >
        N/A
      </div>
      <div
        class="actionLogList_actionLog_duration"
      >
        N/A
      </div>
      <div
        class="actionLogList_actionLog_text"
      >
        <input
          class="editor"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PC operations > keyboard operations > in ActionLogPane, press h to move to ActionLogListPane > after press h 1`] = `
<div>
  <div>
    <input />
  </div>
  <button>
    start sync
  </button>
  <pre />
  <div
    class="actionLogList_container"
  >
    
    <div
      class="actionLogList_separator"
    >
      ongoing
    </div>
    <div
      class="actionLogList_actionLog_container selected"
    >
      <div
        class="actionLogList_actionLog_startAt"
      >
        1970-01-01 09:00:01
      </div>
      <div
        class="actionLogList_actionLog_endAt"
      >
        N/A
      </div>
      <div
        class="actionLogList_actionLog_duration"
      >
        N/A
      </div>
      <div
        class="actionLogList_actionLog_text"
      >
        log1
      </div>
    </div>
    <div
      class="actionLogList_actionLog_container"
    >
      <div
        class="actionLogList_actionLog_startAt"
      >
        1970-01-01 09:00:02
      </div>
      <div
        class="actionLogList_actionLog_endAt"
      >
        N/A
      </div>
      <div
        class="actionLogList_actionLog_duration"
      >
        N/A
      </div>
      <div
        class="actionLogList_actionLog_text"
      >
        log2
      </div>
    </div>
    
    
  </div>
</div>
`;
